Fix spacing

--- a/cigionline/static/themes/dph/css/_basic_page.scss
+++ b/cigionline/static/themes/dph/css/_basic_page.scss
@@ -180,15 +180,19 @@ body {
         @include media-breakpoint-up(md) {
           display: flex;
         }
-
         list-style: none;
         padding: 0;
 
         li {
-          padding: 0 1rem;
+          @include media-breakpoint-up(md) {
+            padding: 0 1rem;
+          }
+          padding: 0;
 
           &:not(:last-child) {
-            border-right: 1px solid $cigi-text-grey;
+            @include media-breakpoint-up(md) {
+              border-right: 1px solid $cigi-text-grey;
+            }
           }
 
           &:first-child {
